--- a/pecaplay/src/main/res/layout/navigation_setting_button.xml
+++ b/pecaplay/src/main/res/layout/navigation_setting_button.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-           xmlns:app="http://schemas.android.com/apk/res-auto"
-           android:layout_width="20dp"
-           android:layout_height="20dp"
-           android:layout_gravity="center_vertical|right"
-           android:padding="3dp"
-           android:clickable="true"
-           android:focusable="true"
-           android:scaleType="fitCenter"
-           android:alpha="0.75"
-           android:background="?attr/selectableItemBackground"
-           app:srcCompat="@drawable/ic_settings_48px"
-           android:tint="?android:attr/textColorPrimary"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:layout_gravity="center_vertical|right"
+    android:padding="3dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:scaleType="fitCenter"
+    android:alpha="0.75"
+    android:background="?attr/selectableItemBackground"
+    app:srcCompat="@drawable/ic_settings_48px"
+    android:tint="?android:attr/textColorPrimary" />
 
