--- a/pecaplay/src/main/res/drawable/naviitem_background2.xml
+++ b/pecaplay/src/main/res/drawable/naviitem_background2.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:width="100dp" android:drawable="@android:color/transparent" />
-    <item android:width="100dp" android:left="90dp" android:drawable="@color/teal_400"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:width="100dp"
+        android:drawable="@android:color/transparent" />
+    <item
+        android:width="100dp"
+        android:left="90dp"
+        android:drawable="@color/teal_400" />
 
-    <item android:gravity="center"  android:width="10dp">
+    <item
+        android:gravity="center"
+        android:width="10dp">
 
-            <shape android:shape="rectangle"   >
-                <solid android:color="@color/red_700"/>
-                <size android:width="11dp"  />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/red_700" />
+            <size android:width="11dp" />
 
-            </shape>
-
-
+        </shape>
 
 
     </item>
