--- a/pecaplay/src/main/res/layout/pref_fragment_floatingactionbutton.xml
+++ b/pecaplay/src/main/res/layout/pref_fragment_floatingactionbutton.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_gravity="bottom|right"
@@ -8,6 +7,5 @@
     android:src="@drawable/ic_floating_action_button_add"
     android:layout_height="wrap_content"
     app:fabSize="normal"
-    app:backgroundTint="@color/light_blue_500"
-    />
+    app:backgroundTint="@color/light_blue_500" />
 
