--- a/pecaplay/src/main/res/layout-w600dp-land/pacaplay_activity.xml
+++ b/pecaplay/src/main/res/layout-w600dp-land/pacaplay_activity.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="@dimen/navigation_width"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <com.google.android.material.navigation.NavigationView
+    <org.peercast.pecaplay.navigation.PecaNaviView
         android:id="@+id/vNavigation"
         android:layout_width="@dimen/navigation_width"
         android:layout_height="match_parent"
