--- a/pecaplay/src/main/res/layout/pacaplay_activity.xml
+++ b/pecaplay/src/main/res/layout/pacaplay_activity.xml
@@ -31,7 +31,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <com.google.android.material.navigation.NavigationView
+    <org.peercast.pecaplay.navigation.PecaNaviView
         android:id="@+id/vNavigation"
         android:layout_width="@dimen/navigation_width"
         android:layout_height="match_parent"
