--- a/pecaplay/src/main/res/layout-w600dp-land/pacaplay_activity.xml
+++ b/pecaplay/src/main/res/layout-w600dp-land/pacaplay_activity.xml
@@ -20,7 +20,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/vYpChannelFragmentContainer"
-        android:name="org.peercast.pecaplay.list.YpChannelFragment"
+        android:name="org.peercast.pecaplay.chanlist.YpChannelFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/navigation_width"
