--- a/pecaplay/src/main/res/layout/pacaplay_activity.xml
+++ b/pecaplay/src/main/res/layout/pacaplay_activity.xml
@@ -25,7 +25,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/vYpChannelFragmentContainer"
-            android:name="org.peercast.pecaplay.list.YpChannelFragment"
+            android:name="org.peercast.pecaplay.chanlist.YpChannelFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
