--- a/pecaplay/src/main/res/layout/navigation_action_view_badge.xml
+++ b/pecaplay/src/main/res/layout/navigation_action_view_badge.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/vBadge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center|right"
     android:alpha="0.7"
     android:paddingTop="3dp"
-    android:textColor="?android:attr/textColorSecondary"
+    android:textColor="@color/navigation_item"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textSize="12sp" />
+    android:textSize="12sp"/>
