--- a/core/src/main/res/values-night/base-theme.xml
+++ b/core/src/main/res/values-night/base-theme.xml
@@ -5,4 +5,6 @@
         <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Solid</item>
         <item name="colorPrimary">@color/grey_900</item>
     </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Dark" />
 </resources>
