--- a/pecaplay/src/main/res/layout/pecaplay_activity.xml
+++ b/pecaplay/src/main/res/layout/pecaplay_activity.xml
@@ -29,6 +29,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <FrameLayout
+            android:id="@+id/vMiniPlayerContainer"
+            android:layout_gravity="end|bottom"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <org.peercast.pecaplay.navigation.PecaNaviView
