--- a/pecaplay/src/main/res/layout-w600dp-land/pecaplay_activity.xml
+++ b/pecaplay/src/main/res/layout-w600dp-land/pecaplay_activity.xml
@@ -23,14 +23,14 @@
         android:name="org.peercast.pecaplay.chanlist.YpChannelFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/navigation_width"
+        android:layout_marginStart="@dimen/navigation_width"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <FrameLayout
         android:id="@+id/vMiniPlayerContainer"
         android:layout_gravity="end|bottom"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/miniplayer_width"
+        android:layout_height="@dimen/miniplayer_height"
         />
 
     <org.peercast.pecaplay.navigation.PecaNaviView
