--- a/pecaplay/src/main/res/layout/pecaplay_activity.xml
+++ b/pecaplay/src/main/res/layout/pecaplay_activity.xml
@@ -30,6 +30,7 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+        <!--TODO-->
         <FrameLayout
             android:id="@+id/vMiniPlayerContainer"
             android:layout_gravity="end|bottom"
