--- a/pecaviewer/src/main/res/layout/activity_main.xml
+++ b/pecaviewer/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
         <variable
                 name="appViewModel"
-                type="org.peercast.pecaviewer.ViewerViewModel" />
+                type="org.peercast.pecaviewer.PecaViewerViewModel" />
 
         <variable
                 name="chatViewModel"
