--- a/pecaviewer/src/main/res/layout/player_toolbar.xml
+++ b/pecaviewer/src/main/res/layout/player_toolbar.xml
@@ -12,7 +12,7 @@
 
         <variable
                 name="appViewModel"
-                type="org.peercast.pecaviewer.ViewerViewModel" />
+                type="org.peercast.pecaviewer.PecaViewerViewModel" />
 
         <import type="android.view.View" />
 
