--- a/pecaplay/src/main/res/layout-w600dp-land/peca_play_activity.xml
+++ b/pecaplay/src/main/res/layout-w600dp-land/peca_play_activity.xml
@@ -1,10 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/vDrawerLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -28,22 +23,20 @@
             android:name="org.peercast.pecaplay.chanlist.YpChannelFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/navigation_width"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <org.peercast.pecaplay.navigation.PecaNaviView
+            android:id="@+id/vNavigation"
+            android:layout_width="@dimen/navigation_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_marginTop="3dp"
+            android:background="@color/navigation_background_land"
+            app:itemBackground="@android:color/transparent"
+            app:itemIconTint="@color/navigation_item"
+            app:itemTextColor="@color/navigation_item"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <org.peercast.pecaplay.navigation.PecaNaviView
-        android:id="@+id/vNavigation"
-        android:layout_width="@dimen/navigation_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:layout_marginTop="?android:attr/actionBarSize"
-        android:paddingTop="35dp"
-        app:headerLayout="@null"
-        app:itemIconTint="@color/navigation_item"
-        app:itemTextColor="@color/navigation_item"
-        app:itemBackground="@android:color/transparent"/>
-    <!---->
-
-</androidx.drawerlayout.widget.DrawerLayout>
-
+</layout>
