--- a/pecaviewer/src/main/res/layout/pip_player_fragment.xml
+++ b/pecaviewer/src/main/res/layout/pip_player_fragment.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="isVisibleTitleBar"
@@ -27,7 +28,7 @@
             android:layout_height="36dp"
             android:layout_gravity="bottom"
             android:background="#D0212121"
-            android:visibility="@{isVisibleTitleBar ? View.VISIBLE : View.GONE}"
+            bind:visibleAnimate="@{isVisibleTitleBar}"
             android:padding="3dp">
 
             <TextView
