--- a/pecaviewer/src/main/res/layout/player_toolbar.xml
+++ b/pecaviewer/src/main/res/layout/player_toolbar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:peca="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        tools:ignore="RtlHardcoded,RtlSymmetry">
+        xmlns:bind="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -27,11 +26,11 @@
             android:layout_gravity="bottom"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
-            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
             android:focusable="true"
             android:clickable="true"
-            peca:visibleAnimate="@{!safeUnbox(playerViewModel.isFullScreenMode) || safeUnbox(playerViewModel.isControlsViewVisible) || safeUnbox(appViewModel.slidingPanelState==1)}"
-            android:paddingRight="@dimen/player_toolbar_padding_right">
+            bind:visibleAnimate="@{!safeUnbox(playerViewModel.isFullScreenMode) || safeUnbox(playerViewModel.isControlsViewVisible) || safeUnbox(appViewModel.slidingPanelState==1)}"
+            android:paddingEnd="@dimen/player_toolbar_padding_right">
 
         <TextView
                 android:id="@android:id/title"
@@ -43,8 +42,8 @@
                 android:singleLine="true"
                 android:ellipsize="end"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
                 android:layout_above="@android:id/text1"
                 android:textColor="@color/green_700" />
 
@@ -55,9 +54,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:textColor="@color/green_800"
-                android:layout_toLeftOf="@android:id/text2" />
+                android:layout_toStartOf="@android:id/text2" />
 
         <TextView
                 android:id="@android:id/text2"
@@ -68,7 +67,7 @@
                 android:text="@{playerViewModel.channelWarning}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_alignBaseline="@android:id/text1"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:paddingRight="10dp"
                 android:paddingLeft="10dp" />
 
