--- a/pecaviewer/src/main/res/layout/bbs_message_item_basic.xml
+++ b/pecaviewer/src/main/res/layout/bbs_message_item_basic.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="RtlHardcoded,RtlSymmetry" >
     <data>
 
         <variable
@@ -33,6 +34,7 @@
                     android:minWidth="30sp"
                     android:paddingRight="10dp"
                     android:text="@{viewModel.number}"
+                    app:underline="@{viewModel.isNew}"
                     android:textStyle="bold" />
 
             <TextView
