--- a/pecaplay/src/main/res/layout/pref_favorite_editor_pane_basic.xml
+++ b/pecaplay/src/main/res/layout/pref_favorite_editor_pane_basic.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="@{safeUnbox(viewModel.isAdvancedMode) ? View.INVISIBLE : View.VISIBLE}">
+        android:visibility="@{viewModel.isAdvancedMode ? View.INVISIBLE : View.VISIBLE}">
 
         <TextView
             android:layout_width="wrap_content"
