--- a/pecaviewer/src/main/res/layout/fragment_chat.xml
+++ b/pecaviewer/src/main/res/layout/fragment_chat.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:peca="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -26,18 +24,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:background="@color/amber_900"
-                app:navigationIcon="@{safeUnbox(viewModel.isThreadListVisible) ? @drawable/ic_arrow_back_black_24dp : @drawable/ic_menu_black_24dp}"
+                app:navigationIcon="@{viewModel.isThreadListVisible ? @drawable/ic_arrow_back_black_24dp : @drawable/ic_menu_black_24dp}"
                 app:subtitle="@{viewModel.chatToolbarSubTitle}"
                 app:subtitleTextColor="@color/grey_1000b"
                 app:title="@{viewModel.chatToolbarTitle}"
                 app:titleTextColor="@color/grey_1000b" />
 
-
         <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="@integer/thread_list_layout_weight"
-                android:visibility="@{safeUnbox(viewModel.isThreadListVisible) ? View.VISIBLE : View.GONE}">
+                android:visibility="@{viewModel.isThreadListVisible ? View.VISIBLE : View.GONE}">
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/vThreadList"
                     android:layout_width="match_parent"
@@ -47,11 +44,11 @@
 
             <androidx.core.widget.ContentLoadingProgressBar
                 android:id="@+id/vThreadListLoading"
-                style="?android:attr/progressBarStyleLarge"
+                style="?android:attr/progressBarStyle"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="@{safeUnbox(viewModel.isThreadListLoading) ? View.VISIBLE : View.GONE}"/>
+                android:visibility="@{viewModel.isThreadListLoading ? View.VISIBLE : View.GONE}"/>
         </FrameLayout>
 
         <View
@@ -60,8 +57,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/grey_400"
-                android:visibility="@{safeUnbox(viewModel.isThreadListVisible) ? View.VISIBLE : View.GONE}" />
-
+                android:visibility="@{viewModel.isThreadListVisible ? View.VISIBLE : View.GONE}" />
 
         <FrameLayout
                 android:layout_width="match_parent"
@@ -77,28 +73,23 @@
                     android:progress="@{viewModel.reloadRemain}"
                     android:visibility="@{viewModel.reloadRemain > 0 ? View.VISIBLE : View.INVISIBLE}" />
 
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/vMessageList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:fadeScrollbars="false"
+                android:scrollbarStyle="outsideInset"
+                android:scrollbars="vertical"/>
 
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/vMessageList"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fadeScrollbars="false"
-                        android:scrollbarStyle="outsideInset"
-                        android:scrollbars="vertical"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            <androidx.core.widget.ContentLoadingProgressBar
+                android:id="@+id/vMessageListLoading"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/progressBarStyleLarge"
+                android:visibility="@{viewModel.isMessageListLoading ? View.VISIBLE : View.GONE}"/>
 
-                <androidx.core.widget.ContentLoadingProgressBar
-                    android:id="@+id/vMessageListLoading"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:visibility="@{safeUnbox(viewModel.isMessageListLoading) ? View.VISIBLE : View.GONE}"/>
-
-            </FrameLayout>
         </FrameLayout>
 
     </LinearLayout>
