--- a/pecaviewer/src/main/res/layout/peca_viewer_fragment.xml
+++ b/pecaviewer/src/main/res/layout/peca_viewer_fragment.xml
@@ -21,8 +21,6 @@
                 type="org.peercast.pecaviewer.player.PlayerViewModel" />
 
         <import type="android.view.View" />
-
-        <import type="android.text.TextUtils" />
     </data>
 
     <FrameLayout
@@ -79,13 +77,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
-                android:layout_marginRight="@dimen/post_dialog_button_margin_right_normal"
+                android:layout_marginRight="30dp"
                 android:layout_marginBottom="30dp"
-                android:visibility="@{safeUnbox(appViewModel.isImmersiveMode) ? View.INVISIBLE : View.VISIBLE}"
-                peca:postDialogButton_fullVisible="@{safeUnbox(appViewModel.isPostDialogButtonFullVisible)}"
-                android:enabled="@{chatViewModel.selectedThreadPoster != null}"
                 android:src="@drawable/ic_mode_edit_black_24dp"
-                peca:imageTintList="@{android.R.attr.textColorPrimary}"
+                app:iconTint="@android:attr/textColorPrimary"
+                app:fabOpaque="@{appViewModel.isPostDialogButtonOpaque}"
+                android:visibility="@{appViewModel.isPostDialogButtonVisible ? View.VISIBLE : View.INVISIBLE}"
+                android:enabled="@{chatViewModel.selectedThreadPoster != null}"
                 android:contentDescription="@null" />
     </FrameLayout>
 </layout>
