--- a/pecaviewer/src/main/res/layout/thumbnail_viewer_fragment.xml
+++ b/pecaviewer/src/main/res/layout/thumbnail_viewer_fragment.xml
@@ -7,6 +7,7 @@
     <ImageView
             android:id="@android:id/icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:contentDescription="@null"/>
 
 </LinearLayout>
