--- a/pecaviewer/src/main/res/menu/menu_chat_board.xml
+++ b/pecaviewer/src/main/res/menu/menu_chat_board.xml
@@ -3,13 +3,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:title="Reload"
+            android:title="@string/menu_reload"
             app:showAsAction="ifRoom"
             android:id="@+id/menu_reload"
             android:icon="@drawable/ic_refresh_black_24dp" />
 
     <item
-            android:title="Abort"
+            android:title="@string/menu_abort"
             app:showAsAction="ifRoom"
             android:visible="false"
             android:id="@+id/menu_abort"
